Docker에 올린 샘플의 모니터링 데이터를 집계하도록 설정

--- a/turbine-web/build.gradle
+++ b/turbine-web/build.gradle
@@ -10,5 +10,14 @@ apply plugin: 'jetty'
     }
 
 jettyRun {
-        httpPort = 7979
+        httpPort = 7878
+		stopKey = 'turbineStop'
+        stopPort = 7777
 }
+
+jettyStop {
+		stopKey = 'turbineStop'
+        stopPort = 7777
+}
+
+
